# clowder

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  THIRD-PARTY-NOTICES.md  build.rs  justfile  needs.md
.github/workflows/: ci.yml  pages.yml  release.yml
assets/data/: zodiac.ron
assets/narrative/: banishment.ron  build.ron  caretake.ron  cook.ron  coordinate.ron  eat.ron  explore.ron  farm.ron  fate.ron  fight.ron  flee.ron  forage.ron  (+18 more)
docs/: TILEMAP_STATUS.md  animations.md  cat-questionnaire.md  missing-sprites.md  open-work.md  reading-list.md  systems-backlog-ranking.md
examples/: inspect_cat.rs  template_audit.rs  template_prompt.rs
logs/: narrative.jsonl
rust_analyzer/: .rustc_info.json
scripts/: _agent_call_log.py  agent_feedback.py  analyze_eat_threshold.py  analyze_emergent.py  analyze_score_competition.py  balance_report.py  baseline_report.py  bisect_canary.sh  build_sensitivity_map.py  build_sensitivity_map.sh  check_canaries.sh  check_continuity.sh  check_iaus_coherence.sh  check_item_transfers.sh  check_step_contracts.sh  check_substrate_stubs.sh  check_time_units.sh  diag_courtship_ceiling.py  explain_constant.py  fingerprint.py  frame_diff.py  generate_open_work.py  generate_wiki.py  hypothesize.py  item_transfers.allowlist  logdb.py  migrate_landed_archive.py  open_work_tree.py  probe_roster.py  promote.sh  replay_frame.py  run_baseline_dataset.sh  score_diff.py  score_track.py  step_contracts.allowlist  substrate_stubs.allowlist  sweep_compare.py  sweep_stats.py  time_units_allowlist.txt  verdict.py
src/: lib.rs  main.rs  persistence.rs  ui_data.rs
tests/: colony_knowledge.rs  ecosystem.rs  escape_viability_scenarios.rs  integration.rs  mentor.rs  own_injury_site_resolver.rs  scenarios.rs
tools/: audit_sprites.py  build_grass_atlas.py  build_rune_atlas.py  cat_questionnaire.html  sprite_catalog.html  tilemap_playground.html  verify_atlas.py
(+1367 files in other folders)
