[package]
name = "clowder"
version = "0.1.1"
edition = "2021"
description = "A terminal-based colony simulation"
license-file = "LICENSE"

[dependencies]
bevy = "0.18"
bevy_ecs_tilemap = "0.18"
bevy_ecs = "0.18"

rand = "0.9"
rand_chacha = { version = "0.9", features = ["serde"] }
noise = "0.9"
ron = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 2

[profile.release]
opt-level = 3
lto = "thin"
strip = true
